--- a/PetItems.html
+++ b/PetItems.html
@@ -6,7 +6,7 @@
     <title>반려동물 용품 페이지</title>
 </head>
 <body>
-    <header>다양한 용품 있습니다</header>
+    <header>강아지 용품 입니다</header>
     <h1>강아지 용품</h1>
 </body>
 </html>
